Fix: nav z-index didn't effect categories list and made some icons go over it

--- a/apps/frontend/src/styles/_components.scss
+++ b/apps/frontend/src/styles/_components.scss
@@ -6,18 +6,19 @@
     bottom: 0;
     width: 100%;
     background-color: var.$bg-color-dark;
+    z-index: 2;
     @include mix.screenMd(){
         position: static;
         padding: 20px 0 18px 0;
         display: flex;
         flex-direction: column;
+        z-index: 1;
     }
 
     .navigation-section{
         display: flex;
         justify-content: space-around;
         margin: 20px 0;
-        z-index: 2;
         font-weight: 100;
         @include mix.screenMd(){
             justify-content: space-between;
